Fixed the z-index bug

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -183,8 +183,9 @@ input:focus {
   border-radius: 0.5rem;
   outline: none;
   padding: 1.25rem;
-  background: none;
+  background: transparent;
   color: #344767;
+  z-index: 2;
 }
 .form .form-control-input:hover {
   border-color: rgba(121, 40, 202, 0.7);
@@ -200,6 +201,7 @@ input:focus {
   cursor: text;
   transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
   background: white;
+  z-index: 1;
 }
 .form .form-control-input:focus ~ .form-control-label,
 .form .form-control .form-control-input:not(:placeholder-shown).form-control-input:not(:focus) ~ .form-control-label {
@@ -207,6 +209,7 @@ input:focus {
   font-size: 0.9rem;
   left: 0.8rem;
   color: #7928ca;
+  z-index: 3;
 }
 
 aside {
